force-app/main/default/objects/Agenda__c/Agenda__c.object-meta.xml
<CustomObject>
    <description>Junction object to allow many-to-many relation between Event Report and PCC</description>
    <label>Agenda</label>
    <nameField>
        <displayFormat>Agenda-{0000}</displayFormat>
        <label>Agenda Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agenda</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>