force-app/main/default/objects/Agenda__c/fields/Chairperson__c.field-meta.xml
<CustomField>
    <fullName>Chairperson__c</fullName>
    <description>DEF - 001928: Added this field to refer Chairperson on Event report</description>
    <formula>Event_Report__r.Chairperson__r.FirstName +&apos; &apos;+  Event_Report__r.Chairperson__r.LastName</formula>
    <label>Chairperson</label>
    <type>Text</type>
</CustomField>