force-app/main/default/objects/Agenda__c/fields/Event_Report__c.field-meta.xml
<CustomField>
    <fullName>Event_Report__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Event Report to which NBAC records are associated</description>
    <inlineHelpText>Event Report to which NBAC records are associated</inlineHelpText>
    <label>Event Report</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipLabel>Agenda</relationshipLabel>
    <relationshipName>Agenda</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>