force-app/main/default/objects/Agenda__c/fields/NBAC_Id__c.field-meta.xml
<CustomField>
    <fullName>NBAC_Id__c</fullName>
    <description>US: 1301 - Formula used in Meeting Creator to display information even if user doesn&apos;t have CRUD on NBAC and opportunity</description>
    <formula>Related_NBAC__r.Id</formula>
    <label>NBAC Id</label>
    <type>Text</type>
</CustomField>