force-app/main/default/objects/Agenda__c/fields/NBAC_Secretary__c.field-meta.xml
<CustomField>
    <fullName>NBAC_Secretary__c</fullName>
    <description>DEF - 001928 - Introduced this field to refer NBAC Secretary on Event Report</description>
    <formula>Event_Report__r.NBAC_Secretary__r.FirstName +&apos; &apos;+ Event_Report__r.NBAC_Secretary__r.LastName</formula>
    <label>NBAC Secretary</label>
    <type>Text</type>
</CustomField>