force-app/main/default/objects/Agenda__c/fields/NBAC_Status__c.field-meta.xml
<CustomField>
    <fullName>NBAC_Status__c</fullName>
    <description>US: 1301 - Created to display information on Meeting Console VF Agenda section even if User profile has no CRUD on NBAC and Opportunity</description>
    <formula>TEXT(Related_NBAC__r.Milestone__c)</formula>
    <label>Milestone</label>
    <type>Text</type>
</CustomField>