force-app/main/default/objects/Agenda__c/fields/Related_NBAC__c.field-meta.xml
<CustomField>
    <fullName>Related_NBAC__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>US-2607 Phase 2: DM NBAC - Meeting Console - Update Agenda Section for NBAC</description>
    <label>Related NBAC</label>
    <referenceTo>Business_Assessment__c</referenceTo>
    <relationshipLabel>Agenda</relationshipLabel>
    <relationshipName>Agenda</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>